--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.1"
   },
   "keywords": [
