--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
-    "gatsby": "^2.24.61",
-    "gatsby-image": "^2.4.19",
-    "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby": "^2.24.80",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-offline": "^3.2.28",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-sharp": "^2.6.36",
-    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-plugin-offline": "^3.2.33",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-source-filesystem": "^2.3.35",
     "gatsby-theme-material-ui": "^1.0.13",
-    "gatsby-transformer-sharp": "^2.5.15",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-transformer-sharp": "^2.5.18",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "@types/node": "^12.12.62",
-    "@types/react": "^16.9.49",
+    "@types/node": "^14.11.10",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "gh-pages": "^3.1.0",
-    "prettier": "2.1.1"
+    "prettier": "2.1.2"
   },
   "keywords": [
     "gatsby"
@@ -49,5 +50,10 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
